fix spacing home page

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,9 +6,11 @@
 
 html,
 body {
+  scroll-behavior: smooth;
   padding: 0;
   margin: 0;
   font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
   
   &:before{
     content:'';
